--- a/Client/InventoryUIwithUMG.uproject
+++ b/Client/InventoryUIwithUMG.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.8",
+	"EngineAssociation": "{8B5673AD-4B40-3909-0104-7AB9C22F75D1}",
 	"Category": "",
 	"Description": ""
 }
